--- a/ShelterME1/Views/SignupPage.xaml
+++ b/ShelterME1/Views/SignupPage.xaml
@@ -2,18 +2,21 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ShelterME1.Views.SignupPage"
-             BackgroundColor="PeachPuff">
+             BackgroundColor="PeachPuff"
+             Title="Sign in/Login">
 
     <StackLayout Padding="30">
         <Image Source="s1.png" HeightRequest="185" Aspect="AspectFit" />
 
-        <Label Text="Sign Up" FontSize="32" HorizontalOptions="Center"/>
-
         <Entry x:Name="UsernameEntry" Placeholder="Username"/>
         <Entry x:Name="PasswordEntry" Placeholder="Password" IsPassword="True"/>
 
-        <Button Text="Sign Up" Clicked="OnSignupButtonClicked" BackgroundColor="Red" 
+        <Button Text="Login" Clicked="OnLoginButtonClicked" BackgroundColor="Red" 
                 TextColor="White" />
+
+        
+        <Button Text="Sign up" BackgroundColor="Red" 
+                TextColor="White" Clicked="OnSignUpButtonClicked"/>
 
         <Label x:Name="MessageLabel" TextColor="Red" HorizontalOptions="Center" Margin="0,20,0,0"/>
     </StackLayout>
